--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
+            name="data"
+            type="com.ezralee.bdotodo.data.model.HistoryData" />
+        <variable
             name="viewModel"
             type="com.ezralee.bdotodo.viewmodel.history.HistoryVM" />
     </data>
@@ -32,7 +35,7 @@
         app:reverseLayout="true"
         app:stackFromEnd="true"
         tools:listitem="@layout/history_recycler_item"
-        items="@{viewModel.historyList}"/>
+        historyItems="@{viewModel.historyList}"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
