--- a/app/src/main/res/layout/activity_daily_add_todo.xml
+++ b/app/src/main/res/layout/activity_daily_add_todo.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.daily.SetDailyActivityVM" />
+            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
     </data>
 
     <RelativeLayout
