--- a/app/src/main/res/layout/add_todo_recycler_item.xml
+++ b/app/src/main/res/layout/add_todo_recycler_item.xml
@@ -22,7 +22,7 @@
         android:id="@+id/todo_recycler_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{accureItem.date}"
+        android:text="@={accureItem.date}"
         style="@style/dailyRecyclerTitleStyle"
         android:textColor="@color/colorOnSecondary"
         android:textSize="16dp"
@@ -33,7 +33,7 @@
         android:id="@+id/todo_recycler_item_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{accureItem.task}"
+        android:text="@={accureItem.task}"
         style="@style/dailyRecyclerTitleStyle"
         android:layout_below="@+id/todo_recycler_item_date"
         android:maxLines="1"
@@ -44,7 +44,7 @@
         android:id="@+id/daily_recycler_item_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{accureItem.count}"
+        android:text="@={accureItem.count}"
         style="@style/dailyRecyclerTitleStyle"
         android:layout_below="@+id/todo_recycler_item_date"
         android:maxLines="1"
