--- a/app/src/main/res/layout/activity_set_goal.xml
+++ b/app/src/main/res/layout/activity_set_goal.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalActivityVM" />
+            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalVM" />
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="완료"
-            android:onClick="@{()->viewModel.createGoal()}"/>
+            android:onClick="@{()->viewModel.createGoal(viewModel.goalItem, viewModel.planList, viewModel.taskList)}"/>
 
         <View
             android:layout_width="0dp"
