--- a/app/src/main/res/layout/fragment_set_goal_1.xml
+++ b/app/src/main/res/layout/fragment_set_goal_1.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalActivityVM" />
+            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalVM" />
     </data>
 
     <RelativeLayout
@@ -37,7 +37,7 @@
                     android:gravity="center_horizontal"
                     android:hint="목표 입력"
                     android:maxLines="1"
-                    android:text="@={viewModel.goalData.goal}"
+                    android:text="@={viewModel.goalItem.goal}"
                     android:textColor="@color/colorOnSecondary"
                     android:textColorHint="@color/colorOnSecondary"
                     android:textCursorDrawable="@color/colorPrimaryVariant" />
@@ -49,7 +49,7 @@
                     android:layout_gravity="right"
                     android:layout_marginHorizontal="8dp"
                     android:onClick="@={()->viewModel.colorPick()}"
-                    android:src="@={viewModel.goalData.color}" />
+                    android:src="@={viewModel.goalItem.color}" />
 
             </LinearLayout>
 
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nexonlv1_bold"
                         android:onClick="@={()->viewModel.setStart()}"
-                        android:text="@={viewModel.goalData.start}"
+                        android:text="@={viewModel.goalItem.start}"
                         android:textSize="20sp" />
 
                     <View
@@ -111,7 +111,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nexonlv1_bold"
                         android:onClick="@={()->viewModel.setEnd()}"
-                        android:text="@={viewModel.goalData.end}"
+                        android:text="@={viewModel.goalItem.end}"
                         android:textSize="20sp" />
 
                     <View
@@ -165,7 +165,7 @@
                 android:minLines="10"
                 android:overScrollMode="ifContentScrolls"
                 android:scrollbars="vertical"
-                android:text="@={viewModel.goalData.memo}"
+                android:text="@={viewModel.goalItem.memo}"
                 android:textColor="@color/colorOnSecondary"
                 android:textColorHint="@color/colorOnSecondary"
                 android:textCursorDrawable="@color/colorPrimaryVariant" />
