--- a/app/src/main/res/layout/fragment_set_goal_2.xml
+++ b/app/src/main/res/layout/fragment_set_goal_2.xml
@@ -5,7 +5,7 @@
 <data>
     <variable
         name="viewModel"
-        type="com.ezralee.bdotodo.viewmodel.goal.SetGoalActivityVM" />
+        type="com.ezralee.bdotodo.viewmodel.goal.SetGoalVM" />
 </data>
 
 <RelativeLayout
