--- a/app/src/main/res/layout/set_goal2_recycler_item.xml
+++ b/app/src/main/res/layout/set_goal2_recycler_item.xml
@@ -4,8 +4,11 @@
     <data>
         <import type="java.lang.Object"/>
         <variable
+            name="taskData"
+            type="com.ezralee.bdotodo.data.model.TaskData" />
+        <variable
             name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalActivityVM" />
+            type="com.ezralee.bdotodo.viewmodel.goal.SetGoalVM" />
     </data>
 
     <LinearLayout
@@ -39,7 +42,7 @@
                 android:gravity="center_horizontal"
                 android:hint="재료명"
                 android:maxLines="1"
-                android:text="@={viewModel.taskData.task}"
+                android:text="@={taskData.task}"
                 android:textColor="@color/colorPrimary"
                 android:textColorHint="@color/colorPrimary"
                 android:textCursorDrawable="@color/colorPrimaryVariant" />
@@ -64,7 +67,7 @@
                 android:hint="필요개수"
                 android:inputType="number"
                 android:maxLines="1"
-                android:text="@={viewModel.taskData.total}"
+                android:text="@={taskData.total}"
                 android:textColor="@color/colorPrimary"
                 android:textColorHint="@color/colorPrimary"
                 android:textCursorDrawable="@color/colorPrimaryVariant" />
