--- a/app/src/main/res/layout/activity_daily_add_todo.xml
+++ b/app/src/main/res/layout/activity_daily_add_todo.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable
-            name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
+<!--        <variable-->
+<!--            name="viewModel"-->
+<!--            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />-->
     </data>
 
     <RelativeLayout
@@ -88,7 +88,7 @@
                     android:layout_marginHorizontal="16dp"
                     android:fontFamily="@font/nexonlv1_bold"
                     android:gravity="center"
-                    android:text="@{viewModel.today}"
+                    android:text="@{}"
                     android:textSize="24sp" />
 
                 <View
@@ -104,7 +104,7 @@
                     android:gravity="right"
                     android:text="오늘"
                     android:textSize="16sp"
-                    android:onClick="@{()->viewModel.setToday()}"/>
+                    android:onClick="@{}"/>
 
             </LinearLayout>
 
@@ -127,8 +127,8 @@
                     android:layout_weight="1"
                     android:spinnerMode="dialog"
                     android:textAlignment="center"
-                    tools:listitem="@{viewModel.goalList}"
-                    android:onItemSelected="@{(parent,view,pos,id)->viewModel.selectedGoal(parent,view,pos,id)}"/>
+                    tools:listitem="@{}"
+                    android:onItemSelected="@{}"/>
 
 
                 <Spinner
@@ -138,8 +138,7 @@
                     android:layout_weight="1"
                     android:spinnerMode="dialog"
                     android:textAlignment="center"
-                    tools:listitem="@{viewModel.planList}"
-                    android:onItemSelected="@{(parent,view,pos,id)->viewModel.selectedPlan(parent,view,pos,id)}"/>
+                    tools:listitem="@{}" />
 
 
             </LinearLayout>
@@ -167,8 +166,7 @@
                     android:gravity="center"
                     android:spinnerMode="dialog"
                     android:textAlignment="center"
-                    tools:listitem="@{viewModel.taskList}"
-                    android:onItemSelected="@{(parent,view,pos,id)->viewModel.selectedTask(parent,view,pos,id)}"/>
+                    tools:listitem="@{}" />
 
                 <TextView
                     style="@style/history_dialog_text"
@@ -188,7 +186,7 @@
                     android:gravity="center"
                     android:text="00"
                     android:textSize="30sp"
-                    android:onClick="@{()->viewModel.setCount()}"/>
+                    android:onClick="@{}"/>
 
                 <TextView
                     style="@style/history_dialog_text"
@@ -221,7 +219,7 @@
                 android:textColor="@color/colorOnSecondary"
                 android:textColorHint="@color/colorOnSecondary"
                 android:textCursorDrawable="@color/colorPrimaryVariant"
-                android:text="@{viewModel.}"/>
+                android:text="@{}"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -237,7 +235,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="취소"
-                    android:onClick="@{()->viewModel.close()}"/>
+                    android:onClick="@{}"/>
 
                 <View
                     android:layout_width="0dp"
@@ -250,7 +248,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="추가"
-                    android:onClick="@{()->viewModel.add()}"/>
+                    android:onClick="@{}"/>
 
                 <View
                     android:layout_width="0dp"
@@ -264,7 +262,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:text="확인"
-                    android:onClick="@{()->viewModel.commit()}"/>
+                    android:onClick="@{}"/>
 
             </LinearLayout>
 
@@ -284,7 +282,7 @@
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/add_todo_recycler_item"
-                android:adapter="@{viewModel.adapter}"/>
+                android:adapter="@{}"/>
 
         </LinearLayout>
 
