--- a/app/src/main/res/layout/activity_set_goal.xml
+++ b/app/src/main/res/layout/activity_set_goal.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="완료"
-            android:onClick="@{()->viewModel.createGoal(viewModel.goalItem, viewModel.planList, viewModel.taskList)}"/>
+            android:onClick="@{}"/>
 
         <View
             android:layout_width="0dp"
