--- a/app/src/main/res/layout/activity_show_history.xml
+++ b/app/src/main/res/layout/activity_show_history.xml
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="8dp"
-            android:text="@{data.title}"
+            android:text="@{}"
             android:layout_marginVertical="6dp"
             android:fontFamily="@font/nexonlv1_bold"
             android:textSize="20sp"/>
@@ -83,7 +83,7 @@
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/history_date"
             android:layout_below="@+id/history_title"
-            android:text="@{data.category}" />
+            android:text="@{}" />
 
         <TextView
             android:id="@+id/history_date"
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_gravity="right"
-            android:text="@{data.date}"
+            android:text="@{}"
             android:layout_alignBottom="@+id/history_category"/>
 
         <androidx.core.widget.NestedScrollView
@@ -122,7 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/history_image"
-                    android:text="@{data.memo}"
+                    android:text="@{}"
                     android:maxLines="8"
                     android:paddingHorizontal="8dp"
                     android:layout_marginTop="12dp"/>
@@ -145,7 +145,7 @@
             android:paddingVertical="8dp"
             android:text="수정"
             android:textColor="@color/colorOnPrimary"
-            android:onClick="@{()->viewModel.editHistory(viewModel)}"/>
+            android:onClick="@{}"/>
 
         <Button
             android:id="@+id/history_ok"
