--- a/app/src/main/res/layout/add_todo_recycler_item.xml
+++ b/app/src/main/res/layout/add_todo_recycler_item.xml
@@ -6,9 +6,9 @@
         name="accureItem"
         type="com.ezralee.bdotodo.data.model.TaskAccureData" />
 
-    <variable
-        name="viewModel"
-        type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
+<!--    <variable-->
+<!--        name="viewModel"-->
+<!--        type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />-->
 </data>
 
 <RelativeLayout
@@ -66,7 +66,7 @@
         android:textSize="16sp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:onClick="@{()->viewModel.deleteTask()}"/>
+        android:onClick="@{}"/>
 
     <View
         android:layout_width="match_parent"
