--- a/app/src/main/res/layout/daily_recycler_add_item.xml
+++ b/app/src/main/res/layout/daily_recycler_add_item.xml
@@ -2,15 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable
-            name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
+<!--        <variable-->
+<!--            name="viewModel"-->
+<!--            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />-->
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="@drawable/shape_add_todo"
-    android:onClick="@{()->viewModel.addTask()}">
+    android:onClick="@{}">
 
     <RelativeLayout
         android:layout_width="wrap_content"
