--- a/app/src/main/res/layout/fragment_daliy.xml
+++ b/app/src/main/res/layout/fragment_daliy.xml
@@ -6,9 +6,9 @@
         <variable
             name="accureItem"
             type="com.ezralee.bdotodo.data.model.TaskAccureData" />
-        <variable
-            name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />
+<!--        <variable-->
+<!--            name="viewModel"-->
+<!--            type="com.ezralee.bdotodo.viewmodel.daily.MainDailyVM" />-->
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
@@ -47,8 +47,7 @@
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/daily_recycler_item"
-                android:onItemSelected="@{()->viewModel.complete()}"
-                android:adapter="@{viewModel.adapter}"/>
+                android:onItemSelected="@{}" />
 
             <RelativeLayout
                 android:id="@+id/add_todo"
